<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_logout"
        android:title="Logout"
        android:icon="@drawable/ic_logout"
        app:showAsAction="always" />

</menu>
