...
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="#ffffff" />
            />

        <ImageButton
            android:id="@+id/btnIcon"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/diet_icon"
            android:src="@drawable/ic_more_vert" />
    </LinearLayout>
...
